2.01.011 /Filter mode /sounds /(handle errors and warnings)